data/derived/fa15/progs/unify/prog2044.ml.out
Characters 256-260:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int
       but an expression was expected of type int * int list list
       Type int is not compatible with type int list list 
